--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,6 @@
 /* styles.css */
 
-div {
-    color: white;
-    background-color: black;
-  }
-  
-  p {
-    color: red;
-  }
+h1 {
+    text-align: center;
+    font-size: 40px;
+}
