--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,31 @@
 /* styles.css */
 
-h1 {
-    text-align: center;
-    font-size: 40px;
-}
-
 li {
-    display: inline;
+    margin-right: 20px;
+    
 }
 
 nav ul {
-    list-style: none;
-    display: inline;
+    display: flex;
+    justify-content: space-between;
 }
 
 a { 
     text-decoration: none;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
+}
+
+ul {
+    list-style: none;
+}
+
+#mainHeader {
+    font-weight: bold; /* Makes the font bolder */
+    padding: 10px 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
