--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,16 @@ ul {
     list-style: none;
 }
 
+recipeList {
+    margin-left: 40px;
+}
+
 #mainHeader {
     font-weight: bold; /* Makes the font bolder */
     padding: 10px 20px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+#aboutP {
+    margin-left: 40px;
 }
